--- a/composer.json
+++ b/composer.json
@@ -56,7 +56,8 @@
         "format": "vendor/bin/pint"
     },
     "config": {
-        "sort-packages": true
+        "sort-packages": true,
+        "allow-plugins": true
     },
     "extra": {
         "laravel": {
